Well, I have something that works without crashing. Need to verify that phaseFuncRotator works correctly. Need to check damatrix_quad for errors. Then, need to do a test case. Should also reimplement cacheing for daInitLayer (see why an error occurs and fix).
git-svn-id: file:///mnt/svn/rtmath@171 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClInclude Include="damatrix_override.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="daInitLayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="damatrix_quad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath.cpp">
@@ -175,6 +181,12 @@
     </ClCompile>
     <ClCompile Include="old_atmos.cpp.txt">
       <Filter>Old</Filter>
+    </ClCompile>
+    <ClCompile Include="daInitLayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="damatrix_quad.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
