--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -170,8 +170,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="daInitLayer.h" />
     <ClInclude Include="damatrix.h" />
     <ClInclude Include="damatrix_override.h" />
+    <ClInclude Include="damatrix_quad.h" />
     <ClInclude Include="old_atmos.h.txt">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
@@ -209,7 +211,9 @@
     <ClInclude Include="zeros.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="daInitLayer.cpp" />
     <ClCompile Include="damatrix.cpp" />
+    <ClCompile Include="damatrix_quad.cpp" />
     <ClCompile Include="old_atmos.cpp.txt">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
