Moved mie to rtmath. Deleted rayleigh, mie and mie-qt-ui projects in VS. Test build of rtmath works.
damatrix now supports lock(). It will drop reference to _rootA and _rootB. If eval()
has no cached entry and requires a parent, damatrix will throw. New throw added
to error.cpp and error.h.

daInitLayer cacheing reenabled. Works. Bug was probably a double free due to interaction
with console-test. A special type of cast is needed to avoid this whenever a daInitLayer
is cast into a shared_ptr<damatrix> role. See console-test for example.

Cacheing provides a vast speedup over slower operations. Tested against da multiplication of
a daInitLayer against itself. Should yield amazing speed boosts whenever calculations
are repeated exactly.

Next commit will be a cleanup, removing deleted projects more completely from the repository.


git-svn-id: file:///mnt/svn/rtmath@172 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -22,6 +22,12 @@
     <Filter Include="Old">
       <UniqueIdentifier>{4c633e33-dd0d-4c96-97d9-fdbdfe61d84c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="PhaseFuncs\Mie">
+      <UniqueIdentifier>{bf4eb8cf-d530-4d1d-9111-61312eb043aa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="PhaseFuncs\Other">
+      <UniqueIdentifier>{2f631269-828b-4b5e-bb40-ff4fbe53a2c5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="rtmath.h">
@@ -117,6 +123,33 @@
     <ClInclude Include="damatrix_quad.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mie.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
+    <ClInclude Include="mie-AnCalc.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
+    <ClInclude Include="mie-phaseFunc.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
+    <ClInclude Include="mie-piNCalc.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
+    <ClInclude Include="mie-Qcalc.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
+    <ClInclude Include="mie-Scalc.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
+    <ClInclude Include="mie-tauNCalc.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
+    <ClInclude Include="mie-wnCalc.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
+    <ClInclude Include="mie-abNCalc.h">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath.cpp">
@@ -187,6 +220,33 @@
     </ClCompile>
     <ClCompile Include="damatrix_quad.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mie-abNCalc.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClCompile>
+    <ClCompile Include="mie-AnCalc.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClCompile>
+    <ClCompile Include="mie.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClCompile>
+    <ClCompile Include="mie-phaseFunc.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClCompile>
+    <ClCompile Include="mie-piNCalc.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClCompile>
+    <ClCompile Include="mie-Qcalc.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClCompile>
+    <ClCompile Include="mie-Scalc.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClCompile>
+    <ClCompile Include="mie-tauNCalc.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
+    </ClCompile>
+    <ClCompile Include="mie-wnCalc.cpp">
+      <Filter>PhaseFuncs\Mie</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
