--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -174,6 +174,15 @@
     <ClInclude Include="damatrix.h" />
     <ClInclude Include="damatrix_override.h" />
     <ClInclude Include="damatrix_quad.h" />
+    <ClInclude Include="mie-abNCalc.h" />
+    <ClInclude Include="mie-AnCalc.h" />
+    <ClInclude Include="mie-phaseFunc.h" />
+    <ClInclude Include="mie-piNCalc.h" />
+    <ClInclude Include="mie-Qcalc.h" />
+    <ClInclude Include="mie-Scalc.h" />
+    <ClInclude Include="mie-tauNCalc.h" />
+    <ClInclude Include="mie-wnCalc.h" />
+    <ClInclude Include="mie.h" />
     <ClInclude Include="old_atmos.h.txt">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
@@ -214,6 +223,15 @@
     <ClCompile Include="daInitLayer.cpp" />
     <ClCompile Include="damatrix.cpp" />
     <ClCompile Include="damatrix_quad.cpp" />
+    <ClCompile Include="mie-abNCalc.cpp" />
+    <ClCompile Include="mie-AnCalc.cpp" />
+    <ClCompile Include="mie-phaseFunc.cpp" />
+    <ClCompile Include="mie-piNCalc.cpp" />
+    <ClCompile Include="mie-Qcalc.cpp" />
+    <ClCompile Include="mie-Scalc.cpp" />
+    <ClCompile Include="mie-tauNCalc.cpp" />
+    <ClCompile Include="mie-wnCalc.cpp" />
+    <ClCompile Include="mie.cpp" />
     <ClCompile Include="old_atmos.cpp.txt">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
