Tweaks mostly involving size_t warnings.
git-svn-id: file:///mnt/svn/rtmath@176 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-console-test/rtmath-console-test.vcxproj
+++ b/rtmath/rtmath-console-test/rtmath-console-test.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="rtmath-console-test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="dalayers.txt" />
     <None Include="oldmain.txt" />
   </ItemGroup>
   <ItemGroup>
