--- a/rtmath/rtmath-console-test/rtmath-console-test.vcxproj.filters
+++ b/rtmath/rtmath-console-test/rtmath-console-test.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Test Segments">
+      <UniqueIdentifier>{257e1f60-22b9-4d09-b463-85234fbce874}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath-console-test.cpp">
@@ -22,6 +25,9 @@
   <ItemGroup>
     <None Include="oldmain.txt">
       <Filter>Resource Files</Filter>
+    </None>
+    <None Include="dalayers.txt">
+      <Filter>Test Segments</Filter>
     </None>
   </ItemGroup>
 </Project>
