git-svn-id: file:///mnt/svn/rtmath@180 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -171,6 +171,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="atmos.h" />
+    <ClInclude Include="command.h" />
     <ClInclude Include="daDiagonalMatrix.h" />
     <ClInclude Include="daInitLayer.h" />
     <ClInclude Include="daLayer.h" />
@@ -228,6 +229,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="atmos.cpp" />
+    <ClCompile Include="command.cpp" />
     <ClCompile Include="daDiagonalMatrix.cpp" />
     <ClCompile Include="daInitLayer.cpp" />
     <ClCompile Include="daLayer.cpp" />
