command.cpp - Signed/unsigned fixes daInitLayer - began rewriting class to use damatrix rotation functions. To be completed tomorrow. daPf - damatrix-derived phase functions. Automatically covers rotation in case of P(alpha). Needs completion to sort between P(alpha) and P(valmap). debug_mem - Namespace change in function. Unimportant. phaseFunc - made pfRotator obsolete. Code that calls it will throw. error - xError now has xObsolete and xDefective. Indicates obsolete or known defective code as throw. Called by base classes defective / obsolete. Makes marking whole class easy!
git-svn-id: file:///mnt/svn/rtmath@181 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="damatrix.h" />
     <ClInclude Include="damatrix_override.h" />
     <ClInclude Include="damatrix_quad.h" />
+    <ClInclude Include="daPf.h" />
     <ClInclude Include="mie-abNCalc.h" />
     <ClInclude Include="mie-AnCalc.h" />
     <ClInclude Include="mie-phaseFunc.h" />
@@ -235,6 +236,7 @@
     <ClCompile Include="daLayer.cpp" />
     <ClCompile Include="damatrix.cpp" />
     <ClCompile Include="damatrix_quad.cpp" />
+    <ClCompile Include="daPf.cpp" />
     <ClCompile Include="mie-abNCalc.cpp" />
     <ClCompile Include="mie-AnCalc.cpp" />
     <ClCompile Include="mie-phaseFunc.cpp" />
