Working with netcdf c++ interface, but I realized that it doesn't work on Windows. I'll move back to the c interface soon.
git-svn-id: file:///mnt/svn/rtmath@185 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-console-test/rtmath-console-test.vcxproj
+++ b/rtmath/rtmath-console-test/rtmath-console-test.vcxproj
@@ -72,7 +72,7 @@
     <IncludePath>C:\devel\netcdf\netcdf-3.6.3\libsrc4;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LibraryPath>C:\devel\netcdf;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\devel\netcdf\netcdf-4.1.1\win32\NET\x64\Release;C:\devel\netcdf;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LibraryPath>C:\devel\netcdf;$(LibraryPath)</LibraryPath>
