Bugfixes to quadrature! It now works properly with damatrices, I think. Tested against constant matrixop-derived damatrices, and the results agreed with hand calculations.
I had to disable the eval_cache in damatrix, for now. I need to reimplement it as
an unordered map and provide a hash function. Otherwise, my current implementation
randomly fails, which is not good. I'm glad that I gave it a master switch!

I turned off the netcdf code, also, as it turns out that there are no compilable c++
netcdf libraries on windows, which sucks. My own solution is insufficient for now, and needs
extensive testing.


git-svn-id: file:///mnt/svn/rtmath@187 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/netcdf-managed/netcdf-managed.vcxproj.filters
+++ b/rtmath/netcdf-managed/netcdf-managed.vcxproj.filters
@@ -18,46 +18,46 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="netcdf-managed.h">
-      <Filter>Old</Filter>
-    </ClInclude>
-    <ClInclude Include="ncattr.h">
-      <Filter>Old</Filter>
-    </ClInclude>
-    <ClInclude Include="ncdim.h">
-      <Filter>Old</Filter>
-    </ClInclude>
-    <ClInclude Include="ncfile.h">
-      <Filter>Old</Filter>
-    </ClInclude>
-    <ClInclude Include="ncgroup.h">
-      <Filter>Old</Filter>
+    <ClInclude Include="ncvar.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="nctype.h">
-      <Filter>Old</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ncvar.h">
-      <Filter>Old</Filter>
+    <ClInclude Include="ncgroup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ncfile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ncdim.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="netcdf-managed.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ncattr.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ncvar.cpp">
-      <Filter>Old</Filter>
-    </ClCompile>
-    <ClCompile Include="ncattr.cpp">
-      <Filter>Old</Filter>
-    </ClCompile>
-    <ClCompile Include="ncdim.cpp">
-      <Filter>Old</Filter>
-    </ClCompile>
-    <ClCompile Include="ncfile.cpp">
-      <Filter>Old</Filter>
+    <ClCompile Include="nctype.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ncgroup.cpp">
-      <Filter>Old</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="nctype.cpp">
-      <Filter>Old</Filter>
+    <ClCompile Include="ncfile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ncdim.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ncvar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ncattr.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
