--- a/rtmath/glgraph-win/glgraph-win.vcxproj.filters
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="fontlabel.cpp">
       <Filter>Fonts</Filter>
     </ClCompile>
+    <ClCompile Include="stringConverter.cpp">
+      <Filter>Fonts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="glgraph-winControl.h">
@@ -111,6 +114,12 @@
       <Filter>Fonts</Filter>
     </ClInclude>
     <ClInclude Include="fontlabel.h">
+      <Filter>Fonts</Filter>
+    </ClInclude>
+    <ClInclude Include="hfontConverter.h">
+      <Filter>Fonts</Filter>
+    </ClInclude>
+    <ClInclude Include="stringConverter.h">
       <Filter>Fonts</Filter>
     </ClInclude>
   </ItemGroup>
