Using hashes for valmaps. Need to test and see if speed increases. 64-bit libraries are slightly different (wrt hashes) than 32-bit. Both build.
git-svn-id: file:///mnt/svn/rtmath@199 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="damatrix_override.h" />
     <ClInclude Include="damatrix_quad.h" />
     <ClInclude Include="daPf.h" />
+    <ClInclude Include="defs.h" />
     <ClInclude Include="mie-abNCalc.h" />
     <ClInclude Include="mie-AnCalc.h" />
     <ClInclude Include="mie-phaseFunc.h" />
