--- a/rtmath/rtmath-console-test/rtmath-console-test.vcxproj
+++ b/rtmath/rtmath-console-test/rtmath-console-test.vcxproj
@@ -128,7 +128,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="rtmath-console-test.cpp" />
+    <ClCompile Include="lbltest.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="dalayers.txt" />
