--- a/rtmath/rtmath-console-test/rtmath-console-test.vcxproj.filters
+++ b/rtmath/rtmath-console-test/rtmath-console-test.vcxproj.filters
@@ -18,16 +18,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="rtmath-console-test.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="oldmain.txt">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="dalayers.txt">
       <Filter>Test Segments</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="lbltest.cpp">
+      <Filter>Test Segments</Filter>
+    </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
