Test created. Addition operation does not run in linear time, as expected. Find out why.
git-svn-id: file:///mnt/svn/rtmath@202 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-console-test/.cproject
+++ b/rtmath/rtmath-console-test/.cproject
@@ -71,6 +71,12 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="cdt.managedbuild.config.gnu.cross.exe.debug.1508093569.735853882" name="lbltest.cpp" rcbsApplicability="disable" resourcePath="lbltest.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cross.cpp.compiler.970381453.952354284">
+						<tool id="cdt.managedbuild.tool.gnu.cross.cpp.compiler.970381453.952354284" name="Cross G++ Compiler" superClass="cdt.managedbuild.tool.gnu.cross.cpp.compiler.970381453"/>
+					</fileInfo>
+					<sourceEntries>
+						<entry excluding="lbltest.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
