--- a/rtmath/rtmath-console-test/rtmath-console-test.vcxproj
+++ b/rtmath/rtmath-console-test/rtmath-console-test.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClCompile Include="lbltest.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="test.cpp" />
   </ItemGroup>
